--- a/pages/about.html
+++ b/pages/about.html
@@ -5,30 +5,36 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>About</title>
-
-      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+      <link rel="stylesheet" href="../style/style.css">
    </head>
 
-   <body class="bg-zinc-900 flex flex-col h-screen justify-betweem">
-      <div id="header"></div>
+   <body>
+      <header>
+         <a href="../pages/index.html">Home</a>
+         <a href="../pages/projects.html">Projects</a>
+         <a href="../pages/blog.html">Blog</a>
+         <a class="link-disabled">About</a>
+      </header>
 
-      <div class="max-w-2xl mx-auto mb-auto">
-         <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">About</h1>
-         <p class="my-3 text-body text-zinc-50"><span style="margin-left:20px"></span>I have experience with low level languages and DoD, as well as foundational skills for Arduino and web development. My favorite types of projects are games and interpreters and I like to work on projects from embedded systems to simple websites. I do this for my love for programming and I mostly code with C/C++, but occasionally also use Java or Javascript. The programming language does not matter to me and I'm really flexible and can learn new technologies easily.</p>
-         <p class="my-3 text-body text-zinc-50"><span style="margin-left:20px"></span>My journey began somewhere in the start of summer 2024, when I made my first web game using Javascript. Sadly, I didn't save it and everything about it is lost. In the end of August I picked up C++ and started making small terminal games and learned new things quickly. After a while the terminal got boring and I moved on and started making games with SFML library, I remember how hard it was for me at the time, but I kept doing it and eventually made my first real game - Pong. It felt amazing and right after moved to bigger and bigger games. At some point I decided to switch to Raylib and it was an amazing experience. Since then, I've made a lot of micro-projects and games like <a id="link-block-placer" class="font-medium text-sky-400 hover:underline" href="../projects/block_placer.html">Block Placer</a> and <a id="link-sandbox2d" class="font-medium text-sky-400 hover:underline" href="../projects/sandbox2d.html">Sandbox-2D</a>.</p>
-         <p class="my-3 text-body text-zinc-50"><span style="margin-left:20px"></span>I made this website as a personal portfolio and project showcase, as well as to start writing blogs, as I've been journaling for some time now. Only I have access to write blogs, which go over topics of my interest and new updates for any of my projects. The blogs are accessible to anyone to read and subscribe to free of charge or advertisements. My website is open-source on <a class="font-medium text-sky-400 hover:underline" href="https://github.com/Acerx-AMJ/acerx-amj.github.io">Github</a> and it is licensed under MIT License, while all blogs are licensed under <a class="font-medium text-sky-400 hover:underline" href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.</p>
-      </div>
+      <article>
+         <h1>About</h1>
+         <p><span></span>I have experience with low level languages and DoD, as well as foundational skills for Arduino and web development. My favorite types of projects are games and interpreters and I like to work on projects from embedded systems to simple websites. I do this for my love for programming and I mostly code with C/C++, but occasionally also use Java or Javascript. The programming language does not matter to me and I'm really flexible and can learn new technologies easily.</p>
+         <p><span></span>My coding journey began somewhere in the start of summer 2024, when I made my first web game using Javascript. Sadly, I didn't save it and everything about it is lost. In the end of August I picked up C++ and started making small terminal games and learned new things quickly. After a while the terminal got boring and I moved on and started making games with SFML library, I remember how hard it was for me at the time, but I kept doing it and eventually made my first real game - Pong. It felt amazing and right after moved to bigger and bigger games. At some point I decided to switch to Raylib and it was an amazing experience. Since then, I've made a lot of micro-projects and games like <a href="../projects/block_placer.html">Block Placer</a> and <a href="../projects/sandbox2d.html">Sandbox-2D</a>.</p>
+         <p><span></span>I made this website as a personal portfolio and project showcase, as well as to start writing blogs, as I've been journaling for some time now. Only I have access to write blogs, which go over topics of my interest and new updates for any of my projects. The blogs are accessible to anyone to read and subscribe to free of charge or advertisements. My website is open-source on <a href="https://github.com/Acerx-AMJ/acerx-amj.github.io">Github</a> and it is licensed under MIT License, while all blogs are licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.</p>
+      </article>
 
-      <div id="footer"></div>
-      <script>
-         $('#header').load('../templates/header.html', function() {
-            $('#link-to-about')[0].className = "sm:mx-5 mx-2.5 my-3 font-medium text-zinc-400 pointer-events-none"
-         })
+      <footer>
+         <h1 id="copyright-notice"></h1>
+         <p>This project is licensed under MIT License. See the full license <a href="https://github.com/Acerx-AMJ/acerx-amj.github.io/blob/main/LICENSE">here</a>.</p>
 
-         $('#footer').load('../templates/footer.html', function() {
-            $('#copyright-notice')[0].innerText = `© ${new Date().getFullYear()} DANIEL VISHNEVSKY`
-         })
-      </script>
+         <div>
+            <a href="mailto:&#097;&#106;&#109;&#046;&#097;&#099;&#101;&#114;&#120;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">Email</a>
+            <a href="https://github.com/Acerx-AMJ/acerx-amj.github.io">Source</a>
+            <a href="https://github.com/Acerx-AMJ">Github</a>
+            <a href="https://acerxamj.itch.io/">Itch.io</a>
+            <a href="https://www.youtube.com/@Acerx-AMJ">Youtube</a>
+         </div>
+         <script src="../source/footer.js"></script>
+      </footer>
    </body>
 </html>
