--- a/projects/block_placer.html
+++ b/projects/block_placer.html
@@ -5,31 +5,34 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Block Placer</title>
-
-      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+      <link rel="stylesheet" href="../style/style.css">
    </head>
 
-   <body class="bg-zinc-900 flex flex-col h-screen justify-between">
-      <div id="header"></div>
+   <body>
+      <header>
+         <a href="../pages/index.html">Home</a>
+         <a href="../pages/projects.html">Projects</a>
+         <a href="../pages/blog.html">Blog</a>
+         <a href="../pages/about.html">About</a>
+      </header>
 
-      <div class="max-w-2xl mx-auto mb-auto">
-         <h1 class="mt-5 text-center text-heading text-4xl text-zinc-50 font-bold">Block Placer</h1>
-         <p class="my-2 text-center text-heading text-zinc-400">Daniel Vishnevsky</p>
-         <img class="mx-auto rounded-xl" src="../assets/block_placer_4.png"/>
+      <article>
+         <h1>Block Placer</h1>
+         <h3>Daniel Vishnevsky</h3>
+         <img src="../assets/block_placer_4.png"/>
 
-         <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">About</h3>
-         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>Block Placer is a game heavily inspired by Tetris. It is made with C++ and Raylib and I used this project to transition from using SFML to Raylib. It served its purpose well and I learned the foundations of Raylib. I found that Raylib is way easier to use than SFML and just as useful if not more. This is a great project for a beginner to make as it teaches a lot about game design and logic.</p>
+         <h2>About</h2>
+         <p><span></span>Block Placer is a game heavily inspired by Tetris. It is made with C++ and Raylib and I used this project to transition from using SFML to Raylib. It served its purpose well and I learned the foundations of Raylib. I found that Raylib is way easier to use than SFML and just as useful if not more. This is a great project for a beginner to make as it teaches a lot about game design and logic.</p>
 
-         <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">Features</h3>
-         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>Different game states are handled with a state handler. Unlike most Tetris clones, this one features 3 playable modes - solo, co-op and versus. This is what I'm most proud of. In co-op mode you can play with a friend on a larger map or challenge yourself to control two tetrominoes at the same time - both are extremely fun to do! But if you're more on the competitive side then you can challenge your friends in versus.</p>
-         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span></p>
-         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>Playing with friends is really fun, but you can't always do it on a single machine like this game requires. That's why I might come back to this in the future and learn how to implement networking to let players play with each other around the world.</p>
+         <h2>Features</h2>
+         <p><span></span>Different game states are handled with a state handler. Unlike most Tetris clones, this one features 3 playable modes - solo, co-op and versus. This is what I'm most proud of. In co-op mode you can play with a friend on a larger map or challenge yourself to control two tetrominoes at the same time - both are extremely fun to do! But if you're more on the competitive side then you can challenge your friends in versus.</p>
+         <p><span></span></p>
+         <p><span></span>Playing with friends is really fun, but you can't always do it on a single machine like this game requires. That's why I might come back to this in the future and learn how to implement networking to let players play with each other around the world.</p>
 
-         <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">Play</h3>
-         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>The game is available completely for free on Linux and MacOS on <a class="font-medium text-sky-400 hover:underline" href="https://acerxamj.itch.io/block-placer">Itch.io</a>. It is open-source and available on <a class="font-medium text-sky-400 hover:underline" href="https://github.com/Acerx-AMJ/block_placer">Github</a> under MIT License.</p>
+         <h2>Play</h2>
+         <p><span></span>The game is available completely for free on Linux and MacOS on <a href="https://acerxamj.itch.io/block-placer">Itch.io</a>. It is open-source and available on <a href="https://github.com/Acerx-AMJ/block_placer">Github</a> under MIT License.</p>
 
-         <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">Gallery</h3>
+         <h2>Gallery</h2>
          <div id="screen"></div>
          <div id="gallery">
             <img src="../assets/block_placer_1.png"/> 
@@ -38,14 +41,20 @@
             <img src="../assets/block_placer_4.png"/> 
          </div>
          <script src="../source/gallery.js"></script>
-      </div>
+      </article>
 
-      <div id="footer"></div>
-      <script>
-         $('#header').load('../templates/header.html')
-         $('#footer').load('../templates/footer.html', function() {
-            $('#copyright-notice')[0].innerText = `© ${new Date().getFullYear()} DANIEL VISHNEVSKY`
-         })
-      </script>
+      <footer>
+         <h1 id="copyright-notice"></h1>
+         <p>This project is licensed under MIT License. See the full license <a href="https://github.com/Acerx-AMJ/acerx-amj.github.io/blob/main/LICENSE">here</a>.</p>
+
+         <div>
+            <a href="mailto:&#097;&#106;&#109;&#046;&#097;&#099;&#101;&#114;&#120;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">Email</a>
+            <a href="https://github.com/Acerx-AMJ/acerx-amj.github.io">Source</a>
+            <a href="https://github.com/Acerx-AMJ">Github</a>
+            <a href="https://acerxamj.itch.io/">Itch.io</a>
+            <a href="https://www.youtube.com/@Acerx-AMJ">Youtube</a>
+         </div>
+         <script src="../source/footer.js"></script>
+      </footer>
    </body>
 </html>
