Added a search bar.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -20,6 +20,8 @@
          <h1>Projects</h1>
          <p><span></span>You'll find a list of my projects here including projects I have not published on Github, but most of them are and their source-code can be found <a href="https://github.com/Acerx-AMJ">here</a>.</p>
 
+         <input type="text" id="search-bar" placeholder="Search For a Project..." onfocus="this.select()"/>
+         <p id="bad-search">No projects match your search.</p>
          <div id="projects"></div>
          <script src="../source/projects.js"></script>
       </article>
