Added arrow buttons for galleries.

--- a/projects/block_placer.html
+++ b/projects/block_placer.html
@@ -33,12 +33,14 @@
          <p><span></span>The game is available completely for free on Linux and MacOS on <a href="https://acerxamj.itch.io/block-placer">Itch.io</a>. It is open-source and available on <a href="https://github.com/Acerx-AMJ/block_placer">Github</a> under MIT License.</p>
 
          <h2>Gallery</h2>
-         <div id="screen"></div>
          <div id="gallery">
             <img src="../assets/block_placer_1.png"/> 
             <img src="../assets/block_placer_2.png"/> 
             <img src="../assets/block_placer_3.png"/> 
             <img src="../assets/block_placer_4.png"/> 
+
+            <img id="left-arrow"></img>
+            <img id="right-arrow"></img>
          </div>
          <script src="../source/gallery.js"></script>
       </article>
