--- a/projects/pong.html
+++ b/projects/pong.html
@@ -28,14 +28,16 @@
          <p><span></span>This project features two modes - versus and versus bot mode. You can choose to play with a friend on the same machine or play against 4 different difficulties of bots. I also worked on a lot of little things like getting it to feel good with bouncing off of walls and slightly slippery movement. The ball moves faster the longer the game goes, but it doesn't phase through the paddles. I'm really proud of making a bot that is almost impossible to beat, it uses raycasting from my library to predict where the ball will go.</p>
 
          <h2>Gallery</h2>
-         <div id="screen"></div>
          <div id="gallery">
-            <img src="../assets/pong_1.png"/> 
-            <img src="../assets/pong_2.png"/> 
-            <img src="../assets/pong_3.png"/> 
-            <img src="../assets/pong_4.png"/> 
-            <img src="../assets/pong_5.png"/> 
-            <img src="../assets/pong_6.png"/> 
+            <img src="../assets/pong_1.png"/>
+            <img src="../assets/pong_2.png"/>
+            <img src="../assets/pong_3.png"/>
+            <img src="../assets/pong_4.png"/>
+            <img src="../assets/pong_5.png"/>
+            <img src="../assets/pong_6.png"/>
+
+            <img id="left-arrow"></img>
+            <img id="right-arrow"></img>
          </div>
          <script src="../source/gallery.js"></script>
       </article>
