--- a/projects/sandbox2d.html
+++ b/projects/sandbox2d.html
@@ -36,7 +36,6 @@
          <p><span></span>The game is available completely for free on Windows, Linux and MacOS on <a href="https://acerxamj.itch.io/sandbox-2d">Itch.io</a>. It is also open-source on <a href="https://github.com/Acerx-AMJ/Sandbox-2D">Github</a> and licensed under the MIT License. A playlist of videos can be found on <a href="https://youtube.com/playlist?list=PL1QtXajvJAXc7bSy8mtwEIBQS9Clc-mjv&si=XDiw9BTXAgHvQVMk">Youtube</a>.</p>
 
          <h2>Gallery</h2>
-         <div id="screen"></div>
          <div id="gallery" class="">
             <img src="../assets/sandbox2d_9.png"/> 
             <img src="../assets/sandbox2d_10.png"/> 
@@ -50,6 +49,9 @@
             <img src="../assets/sandbox2d_7.png"/> 
             <img src="../assets/sandbox2d_8.png"/> 
             <img src="../assets/sandbox2d_12.png"/> 
+
+            <img id="left-arrow"></img>
+            <img id="right-arrow"></img>
          </div>
          <script src="../source/gallery.js"></script>
       </article>
