Updated Block Placer description.

--- a/projects/block_placer.html
+++ b/projects/block_placer.html
@@ -30,7 +30,7 @@
          <p><span></span>Playing with friends is really fun, but you can't always do it on a single machine like this game requires. That's why I might come back to this in the future and learn how to implement networking to let players play with each other around the world.</p>
 
          <h2>Play</h2>
-         <p><span></span>The game is available completely for free on Linux and MacOS on <a href="https://acerxamj.itch.io/block-placer">Itch.io</a>. It is open-source and available on <a href="https://github.com/Acerx-AMJ/block_placer">Github</a> under MIT License.</p>
+         <p><span></span>The game is available completely for free on Windows, Linux and MacOS on <a href="https://acerxamj.itch.io/block-placer">Itch.io</a>. It is open-source and available on <a href="https://github.com/Acerx-AMJ/block_placer">Github</a> under MIT License.</p>
 
          <h2>Gallery</h2>
          <div id="gallery">
