Added blogs and wrote my first blog.

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -18,7 +18,12 @@
 
       <article>
          <h1>Blog</h1>
-         <p>My blog is work in progress. Stay tuned for future updates!</p>
+         <p><span></span>Welcome to my blog! I go over topics like new updates for my projects, the technologies I like and dislike and my personal opinions on all sort of things. Take a look around!</p>
+
+         <input type="text" id="search-bar" placeholder="Search For a Blog..." onfocus="this.select()"/>
+         <p id="bad-search">No blogs match your search.</p>
+         <div id="blogs"></div>
+         <script src="../source/blogs.js"></script>
       </article>
 
       <script src="../source/footer.js"></script>
