Added pagination to project page.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -23,6 +23,8 @@
          <input type="text" id="search-bar" placeholder="Search For a Project..." onfocus="this.select()"/>
          <p id="bad-search">No projects match your search.</p>
          <div id="projects"></div>
+
+         <div id="project-buttons"></div>
          <script src="../source/projects.js"></script>
       </article>
 
