--- a/pages/blog.html
+++ b/pages/blog.html
@@ -23,6 +23,8 @@
          <input type="text" id="search-bar" placeholder="Search For a Blog..." onfocus="this.select()"/>
          <p id="bad-search">No blogs match your search.</p>
          <div id="blogs"></div>
+
+         <div id="project-buttons"></div>
          <script src="../source/blogs.js"></script>
       </article>
 
