Added the home page.

--- a/pages/index.html
+++ b/pages/index.html
@@ -17,8 +17,27 @@
       </header>
 
       <article>
-         <h1>Welcome to my website!</h1>
-         <p>Everything is a work in progress. Stay tuned for future updates!</p>
+         <h1>Welcome!</h1>
+         <h2>I'm Daniel Vishnevsky.</h2>
+         <p style="margin-left:5px">Low-level programmer</p>
+         <p style="margin-left:5px">Exploring embedded systems, games and interpreters</p>
+         <p style="margin-left:5px">Fast learner</p>
+
+         <h2>Pages</h2>
+         <div id="pages">
+            <a href="../pages/projects.html">
+               <h2>Projects</h2>
+               <p>Explore my projects</p>
+            </a>
+            <a href="../pages/blog.html">
+               <h2>Blog</h2>
+               <p>New project updates and my opinions</p>
+            </a>
+            <a href="../pages/about.html">
+               <h2>About</h2>
+               <p>About me and this website</p>
+            </a>
+         </div>
       </article>
 
       <script src="../source/footer.js"></script>
