Refactored home page.

--- a/pages/index.html
+++ b/pages/index.html
@@ -17,13 +17,10 @@
       </header>
 
       <article>
-         <h1>Welcome!</h1>
-         <h2>I'm Daniel Vishnevsky.</h2>
-         <p style="margin-left:5px">Low-level programmer</p>
-         <p style="margin-left:5px">Exploring embedded systems, games and interpreters</p>
-         <p style="margin-left:5px">Fast learner</p>
-
-         <h2>Pages</h2>
+         <h2>Welcome!</h2>
+         <p><span></span>My name is Daniel Vishnevsky. I'm a low-level programmer and a game developer from Latvia. Usually I'm tinkering with electronics or making games with Raylib.</p>
+         <p><span></span>Check out my projects or blogs where I write about my opinions and updates down below. You can also find my social accounts and my E-mail down below in the footer.</p>
+         
          <div id="pages">
             <a href="../pages/projects.html">
                <h2>Projects</h2>
@@ -31,7 +28,7 @@
             </a>
             <a href="../pages/blog.html">
                <h2>Blog</h2>
-               <p>New project updates and my opinions</p>
+               <p>Read about project updates and my opinions</p>
             </a>
             <a href="../pages/about.html">
                <h2>About</h2>
